GAEST-180: Prevent word break inside actions names

--- a/assets/easy_admin/easy_admin.scss
+++ b/assets/easy_admin/easy_admin.scss
@@ -47,3 +47,9 @@ form[name="user"] {
         width: 100% !important;
     }
 }
+
+.actions {
+    a {
+        white-space: nowrap;
+    }
+}
